Updating docs to use smithy references.

--- a/docs/dep/dep-001.md
+++ b/docs/dep/dep-001.md
@@ -29,7 +29,7 @@ for all the Skylark scripts that are being used everywhere.
 Using `please` means that prospective users of the project have a very high
 barrier to entry, which is exactly what any open source project that wishes to
 be widely used wants to avoid. Users would need to learn the quirks of Tekton
-and Dracon **AND** `please`. Having to learn a bunch of new tools before being
+and Smithy **AND** `please`. Having to learn a bunch of new tools before being
 able to deploy anything is bound to discourage users. We have also had bad
 feedback from users who were unable to follow our installation guide, because
 `please` through weird errors and we couldn't provide them with a
