--- a/docs/dep/dep-003.md
+++ b/docs/dep/dep-003.md
@@ -15,7 +15,7 @@ same database without issues.
 
 ## Design
 
-A new subcommand will be added to the `draconctl` command called `migrations`
+A new subcommand will be added to the `smithyctl` command called `migrations`
 and it will offer the three following choices:
 
 1. `inspect`: check the state of the database versus the expected state
@@ -40,7 +40,7 @@ migrations and will use the directory name as the name of the table where it
 will keep track of the migrations. So, assume the following directory structure:
 
 ```bash
-/etc/dracon/migrations/
+/etc/smithy/migrations/
                         enrichments/
                                     001_init.up.sql
                                     002_varchar_to_text.up.sql
@@ -51,7 +51,7 @@ will keep track of the migrations. So, assume the following directory structure:
 ```
 
 In this case, the CLI will expect to receive the positional argument
-`/etc/dracon/migrations/` or `/etc/dracon/migrations` and will scan it to find
+`/etc/smithy/migrations/` or `/etc/smithy/migrations` and will scan it to find
 the subdirectories. Since each subdirectory has a number of SQL scripts, they
 will be applied using two tables to track their state:
 
@@ -63,7 +63,7 @@ ensure that there are no weird interactions between them.
 
 At the time of this writing we don't have a good way of packaging migrations
 with components, so in order for them to be applied, they will need to be
-included in the `draconctl` container. This container image is expected to be
+included in the `smithyctl` container. This container image is expected to be
 accessible by the Kubernetes cluster and the kube context must be correctly
 configured.
 
