--- a/docs/dep/dep-004.md
+++ b/docs/dep/dep-004.md
@@ -44,7 +44,7 @@ should be able to run inany cluster as long as the Tasks are available.
 Packaging all the Tasks into one Helm packagemakes this trivial to achieve,
 since it can be easily uploaded and distributed to an OCI registry.
 
-The second stage begins as soon as the `draconctl` is invoked to deploy a
+The second stage begins as soon as the `smithyctl` is invoked to deploy a
 Pipeline. The Pipeline lists a set of components. The user has 3 different
 formats to describe a component:
 
@@ -132,15 +132,15 @@ We also need to introduce a new package called `pkg/k8s` with an interface
 called `Applier` that replicates the behaviour of the `kubectl apply` command
 along with a mock implementation of the interface for testing purposes.
 
-We will also need to introduce a new commands to the `draconctl` for packaging
+We will also need to introduce a new commands to the `smithyctl` for packaging
 the tasks and deploying the pipelines. The new commands will be the following:
 
 ```bash
-draconctl componentns package [components_path]
-draconctl pipelines deploy [path to a kustomization description file]
+smithyctl componentns package [components_path]
+smithyctl pipelines deploy [path to a kustomization description file]
 ```
 
-The `draconctl pipelines build` command can be retired and used as a base for
+The `smithyctl pipelines build` command can be retired and used as a base for
 the `deploy` command. A `--dry-run` flag can be added so that the `Pipeline`
 flag can be written to some `io.Writer`. A `--only-validate` command can be
 used to check the state of the cluster without trying to deploy the Pipeline at
