--- a/docs/dep/dep-002.md
+++ b/docs/dep/dep-002.md
@@ -72,7 +72,7 @@ the folder.
 All the Tasks listed need to have a unique name and all their parameters need to
 be prefixed with the name of the Task. They should not have a namespace value
 set, we expect that to be set during the deployment of a pipeline. Each task
-must also have a label with key `v1.dracon.ocurity.com/component` and value one
+must also have a label with key `v1.smithy.smithy-security.com/component` and value one
 of the components listed previously.
 
 A pipeline kustomization is free to list an arbitrary amount of components.
@@ -86,8 +86,8 @@ needs to be provided using the `--out` flag.
 
 ## Further considerations
 
-This functionality will be the first feature of our `draconctl` tool, a CLI tool
-that will help administrators manage `Dracon` using one binary instead of a
+This functionality will be the first feature of our `smithyctl` tool, a CLI tool
+that will help administrators manage `Smithy` using one binary instead of a
 hodgepodge of binaries.
 
 Looking ahead into the future, introducing this tool allows us to become a lot
